# Quant_modeller

./: .gitignore  CREATE_YOUR_OWN_ALGORITHM.md  HOW_TO_USE.md  README.md  USER_GUIDE.md  create_custom_algorithm.py  custom_momentum_example.py  demo.py  pyproject.toml  setup_api_keys.py  simple_custom_algorithm.py  simple_example.py  test_config.py
configs/: api_keys.yml
data/features/: feature_registry.json
demo_runs/strategies/strategy_Demo Momentum Strategy_20250823_122812/: experiment_metadata.json
demo_runs/strategies/strategy_Demo Momentum Strategy_20250823_134130/: experiment_metadata.json
demo_runs/strategies/strategy_Demo Momentum Strategy_20250823_140059/: experiment_metadata.json
demo_runs/strategies/strategy_Demo Momentum Strategy_20250823_141953/: experiment_metadata.json
demo_runs/strategies/strategy_Demo Momentum Strategy_20250825_231834/: experiment_metadata.json
my_experiments/strategies/strategy_My First Strategy_20250823_140226/: experiment_metadata.json
my_experiments/strategies/strategy_My First Strategy_20250823_141700/: experiment_metadata.json
my_experiments/strategies/strategy_My First Strategy_20250823_141943/: experiment_metadata.json
src/: __init__.py
src/ai/: __init__.py  explainability.py  idea_generator.py  prompts.py
src/backtest/: __init__.py  engine.py  position_sizing.py  result.py  slippage.py
src/core/: __init__.py  config.py  cross_validation.py  data_api.py  metrics.py
src/features/: __init__.py  generators.py  registry.py  utils.py
src/models/: __init__.py  base_model.py  ensemble_models.py  model_zoo.py  sklearn_models.py  tree_models.py
src/strategies/: __init__.py  schema.py  validator.py
src/tracking/: __init__.py  experiment_manager.py  metrics_logger.py  mlflow_tracker.py
src/viz/: __init__.py  charts.py  dashboard.py  reports.py
tests/: conftest.py  test_core.py  test_features.py  test_metrics.py  test_models.py  test_strategies.py
(+2 files in other folders)
